<resources>
    <string name="app_name" translatable="false">LuckyTool Relic</string>
    <string name="xposeddescription">Xposed module optimized for extensions to ColorOS\nDeveloper: luckyzyx</string>
    <string name="sharedUserLabel" translatable="false">LuckyTool user</string>
    <string name="nav_function">Function</string>
    <string name="nav_home">Home page</string>
    <string name="nav_other">Other</string>
    <string name="nav_log">Logs</string>
    <string name="nav_setting">Settings</string>
    <string name="fragment_source">SourceCode</string>
    <string name="theme_title">Theme</string>
    <string name="theme_title_summary">Page will be automatically refreshed</string>
    <string name="use_dynamic_color">Dynamic colors</string>
    <string name="use_dynamic_color_summary">Use dynamic colors</string>
    <string name="dark_theme">Dark theme</string>
    <string name="follow_system">Follow system</string>
    <string name="dark_theme_off">Always off</string>
    <string name="dark_theme_on">Always on</string>
    <string name="dark_theme_follow_system" translatable="false">@string/follow_system</string>
    <string name="language">Language</string>
    <string name="privacy_agreement">Privacy Agreement</string>
    <string name="auto_check_update">Automatically check for updates</string>
    <string name="auto_check_update_summary">Automatically check for updates when opening the module home page</string>
    <string name="tile_auto_start">Allow built-in tiles to start automatically</string>
    <string name="tile_auto_start_summary">When the host-side module version number is consistent with the local module version number,and enable this function,The function of opened tiles will be automatically triggered after the screen is unlocked.If the trigger fails,please restart the scope and check Root permissions</string>
    <string name="read_agreement">You need to read and agree to the following content before you can use this module</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="clear_all_data_summary">Clear all function data in the module</string>
    <string name="clear_all_data_message">Make sure you want to clear all the function data of the module, and you need to reset the function after clearing?</string>
    <string name="other_settings">Other settings</string>
    <string name="enable_module_print_logs">Enable module print logs</string>
    <string name="enable_module_print_logs_summary">This function is only used to print the running log of the module App itself.\nLog files will be obtained when this switch is turned off.</string>
    <string name="switch_autostart_function_caller">Switch autostart function caller</string>
    <string name="switch_autostart_function_caller_summary">1.The module calling method will open a new page of the module and trigger the self-starting function,This method may cause the screen to be untouchable for a few seconds when it is unlocked\n2.The system ui calling method will call the self-starting function on the process of the system ui,Need to give root permission to the system ui,Otherwise, the autostart cannot be triggered</string>
    <string name="switch_autostart_function_caller_module">Module call</string>
    <string name="switch_autostart_function_caller_systemui">SystemUI call</string>
    <string name="hide_function_page_icon">Hide function page icon</string>
    <string name="hide_desktop_module_icon">Hide desktop module icon</string>
    <string name="hide_desktop_module_icon_summary">LSPosed must be turned off to force desktop icons</string>
    <string name="backup_restore_clear">Backup/Restore/Clear</string>
    <string name="backup_data">Backup Data</string>
    <string name="restore_data">Restore Data</string>
    <string name="data_backup_complete">Data backup completed!</string>
    <string name="data_backup_error">Data backup error!</string>
    <string name="data_restore_complete">Data restore complete!</string>
    <string name="about_title">About</string>
    <string name="about_author">Author</string>
    <string name="donate">Donate reward</string>
    <string name="donate_message">Be sure to note your nickname or ID when donating</string>
    <string name="donate_summary">Your donation will be the driving force for the module update</string>
    <string name="qq">QQ</string>
    <string name="wechat">WeChat</string>
    <string name="alipay">AliPay</string>
    <string name="patreon" translatable="false">Patreon</string>
    <string name="paypal" translatable="false">PayPal</string>
    <string name="donation_list">Donation List</string>
    <string name="feedback_download">Feedback and Download</string>
    <string name="feedback_download_summary">TG Channels, Groups, Repositories, etc.</string>
    <string name="coolmarket">Cool Home Page</string>
    <string name="module_doc">Module Doc</string>
    <string name="qq_channel">QQ Channel</string>
    <string name="telegram_channel">Telegram Channel</string>
    <string name="telegram_group">Telegram Group</string>
    <string name="lsposed_repo">LSPosed Repository</string>
    <string name="github_repo">Github Repository</string>
    <string name="open_source">Open Source</string>
    <string name="open_source_summary">Click to view the open source list</string>
    <string name="participate_translation">Participate in module translations</string>
    <string name="participate_translation_summary">Go to Crowdin to contribute your translation</string>
    <string name="system_not_support">The current system does not support!</string>
    <string name="unsupported_xposed">Module not activated detected.\nPlease use LSPosed %1$s and above to check the module scope.\nIf you have completed this step, you can try to click OK to exit and reopen the module.</string>
    <string name="unsupported_os">Unsupported system</string>
    <string name="unsupported_os_summary">Because the module only supports ColorOS 12 and above systems, please be sure to take security measures!</string>
    <string name="no_root">No Root permission</string>
    <string name="no_root_summary">Root permission is not detected, some functions will not be available!</string>
    <string name="menu_reboot">Restart menu</string>
    <string name="menu_settings">Set menu</string>
    <string name="restart_scope">Restart scoped processes</string>
    <string name="need_restart_scope">Need to restart scope</string>
    <string name="need_restart_system">Need to restart system</string>
    <string name="restart_scope_message">Are you sure you want to restart all scoped processes except the system framework?\nUse this if the module isn\'t working!\nMake sure all the relevant scopes are checked!</string>
    <string name="restart_only_this_page_scope">Restart only this page scope</string>
    <string name="reboot">Restart System</string>
    <string name="fast_reboot">Fast reboot</string>
    <string name="menu_versioninfo">Version Information</string>
    <string name="scope_version_info">Scope version information</string>
    <string name="show_system_app">Show system APP</string>
    <string name="Android">System Related</string>
    <string name="app_label">App Name</string>
    <string name="package_name">Package Name</string>
    <string name="version">Version</string>
    <string name="ColorOSCorePatchTip">The official Color OS installer needs to enable other functions to use\nFunction List-Application Related-Application Installation Related</string>
    <string name="corepatch">Core Patch</string>
    <string name="corepatch_summary">Remove install limits, supports Android 11–14</string>
    <string name="downgr">Allow downgrade apps</string>
    <string name="downgr_summary">Allows the app to override older versions if new versions are installed.</string>
    <string name="authcreak">Disable package manager signature validation</string>
    <string name="authcreak_summary">Signature verification when installing apps can be installed.</string>
    <string name="digestCreak">Disable APK Signature validation</string>
    <string name="digestCreak_summary">Allows overriding directly installed apps with different signatures to the package</string>
    <string name="UsePreSig">Always use the signed installed APP while installing</string>
    <string name="UsePreSig_summary">Is not a normal!danger! Only enable when absolutely needed</string>
    <string name="enhancedMode">Enhancement mode</string>
    <string name="enhancedMode_summary">You can solve some internal integrity check within the app, which does not need to be enabled</string>
    <string name="usepresig_warn">!!! All packages can override installed App!!\nto install unknown packages</string>
    <string name="StatusBar">StatusBar Related</string>
    <string name="StatusbarEvents">StatusBar Events</string>
    <string name="statusbar_double_click_lock_screen">Double click statusbar to lock screen</string>
    <string name="vibrate_when_opening_the_statusbar">Vibrate when opening the status bar</string>
    <string name="set_click_statusbar_scroll_to_top_mode">Set the mode for clicking the status bar to return to the top</string>
    <string name="set_click_statusbar_scroll_to_top_mode_remove_white_list">Remove the whitelist limit</string>
    <string name="StatusBarClock">StatusBar Clock</string>
    <string name="statusbar_clock_mode">Status bar clock mode</string>
    <string name="statusbar_clock_show_year">Show year</string>
    <string name="statusbar_clock_show_month">Show month</string>
    <string name="statusbar_clock_show_day">Show date</string>
    <string name="statusbar_clock_show_week">Show week</string>
    <string name="statusbar_clock_show_period">Show period</string>
    <string name="statusbar_clock_show_double_hour">Show Double Hour</string>
    <string name="statusbar_clock_show_second">Show seconds</string>
    <string name="statusbar_clock_hide_spaces">Hide spaces</string>
    <string name="statusbar_clock_text_alignment">Clock Text Alignment</string>
    <string name="statusbar_clock_left_align">Left Align</string>
    <string name="statusbar_clock_center_align">Center Align</string>
    <string name="statusbar_clock_right_align">Right Align</string>
    <string name="statusbar_clock_show_doublerow">Double row display</string>
    <string name="statusbar_clock_singlerow_fontsize">Single row font size</string>
    <string name="statusbar_clock_doublerow_fontsize">Double row font size</string>
    <string name="statusbar_clock_custom_format">Clock format</string>
    <string name="statusbar_clock_custom_fontsize">Clock font size</string>
    <string name="statusbar_clock_fontsize_summary">If it is 0, the font size will not be modified</string>
    <string name="StatusBarNetWorkSpeed">StatusBar NetWorkSpeed</string>
    <string name="set_network_speed">Set status bar speed refresh rate 1 s</string>
    <string name="enable_double_row_network_speed">Enable Double Row Network Speed</string>
    <string name="set_network_speed_font_size">Set Network Speed Font Size</string>
    <string name="set_network_speed_padding_bottom">Set Network Speed Padding Bottom</string>
    <string name="quick_entry">System Quick Entry</string>
    <string name="quick_entry_summary">e.g. System UI reconciliation tools, process management, engineering mode, etc.</string>
    <string name="set_module_shortcuts">Set module shortcuts</string>
    <string name="set_module_shortcuts_summary">Long press on module icon to show enabled shortcuts</string>
    <string name="remote_adb_debug_title">Remote ADB debugging</string>
    <string name="remote_adb_debug_summary">Please close it when not in use</string>
    <string name="adb_port">ADB Port</string>
    <string name="enable_remote_adb_debugging">Enable remote ADB debugging</string>
    <string name="adb_tv_tip">Long press to copy</string>
</resources>