<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">

    <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/adb_switch"
            android:text="@string/enable_remote_adb_debugging"
            android:layout_marginVertical="8dp"
            android:paddingHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/adb_port_layout"
            app:hintEnabled="true"
            android:hint="@string/adb_port"
            app:hintAnimationEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adb_port"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/adb_tv"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    
    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/adb_tv_tip"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/adb_tv_tip"
            android:paddingHorizontal="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

</LinearLayout>
